# cbrapi

./: .flake8  README.md  main.py  pyproject.toml
cbr/: __init__.py  cbr_settings.py  currency.py  helpers.py  metals.py  rates.py  reserves.py  ruonia.py
cbrapi/: __init__.py  cbr_settings.py  currency.py  helpers.py  metals.py  rates.py  reserves.py  ruonia.py
