[project]
name = "cbr"
version = "0.1.0"
description = "Python interface for Central Bank of Russia (CBR) API"
authors = [
    "AAARRRT <artiomsalazov@gmail.com>",
    "MBK Development LLC <info@rostsber.ru>"
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "suds-py3 (>=1.4.5.0,<2.0.0.0)",
    "lxml (>=6.0.1,<7.0.0)"
]


