[tool.poetry]
name = "cbr"
version = "0.1.0"
description = "Python interface for Central Bank of Russia (CBR) API"
authors = [
    "AAARRRT <artiomsalazov@gmail.com>",
    "MBK Development LLC <info@rostsber.ru>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
requests = "^2.32.5"
pandas = "^2.3.2"
suds-py3 = "^1.4.5.0"
lxml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


