[tool.poetry]
name = "cbrapi"
version = "0.1.6"
description = "Python interface for Central Bank of Russia (CBR) API"
authors = [
    "AAARRRT <artiomsalazov@gmail.com>",
    "MBK Development LLC <info@rostsber.ru>"
]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
pandas = "^2.3.2"
requests = "*"
suds-py3 = "*"
lxml = "*"
ipykernel = "^7.1.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
pytest = "*"
pytest-mock = "*"
scipy-stubs = "*"  # for typehints

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


